--- a/msvc-items-dev.properties
+++ b/msvc-items-dev.properties
@@ -1,3 +1,3 @@
-configuracion.texto=Configurando entorno desarrollo
-configuracion.autor.nombre=Jorge
-configuracion.autor.email=jpatinog@flensa.com.mx
+configuracion.texto=Configurando entorno desarrollo...
+configuracion.autor.nombre=JorgePG
+configuracion.autor.email=jpatinogPG@flensa.com.mx
